スマホ対応

--- a/src/index.html
+++ b/src/index.html
@@ -255,7 +255,7 @@
 			<div class="download-pane is-sub">
 				<h3>ミニゲーム</h3>
 				<a href="#minigames" rel="shadowbox;width=960;height=720" class="download-minigame-button"><img src="images/download/minigame-banner.png" width="200" alt=""></a>
-				<p>制作途中で生まれたミニゲームも遊べます。</p>
+				<p><span>制作途中で生まれた</span><span>ミニゲームも遊べます。</span></p>
 			</div>
 		</div>
 	</div>
