ダウンロード欄の調整

--- a/src/index.html
+++ b/src/index.html
@@ -227,17 +227,17 @@
 			<decoration-wrapper :side="1"></decoration-wrapper>
 		</div>
 	</div>
-	<div id="gallery" class="gallery" v-lazy-container="{ selector: 'img' }">
+	<div id="gallery" class="gallery">
 		<h2>ギャラリー</h2>
 		<div class="gallery-container">
-			<a href="images/gallery/1.jpg" rel="shadowbox[gallery]"><img data-src="images/gallery/1.thumb.jpg" alt="1章コンセプトアート"></a>
-			<a href="images/gallery/2.jpg" rel="shadowbox[gallery]"><img data-src="images/gallery/2.thumb.jpg" alt="ボルト"></a>
-			<a href="images/gallery/3.jpg" rel="shadowbox[gallery]"><img data-src="images/gallery/3.thumb.jpg" alt="避雷針"></a>
-			<a href="images/gallery/4.jpg" rel="shadowbox[gallery]"><img data-src="images/gallery/4.thumb.jpg" alt="電撃移動中のエクレア"></a>
-			<a href="images/gallery/5.jpg" rel="shadowbox[gallery]"><img data-src="images/gallery/5.thumb.jpg" alt="クラゲ足場"></a>
-			<a href="images/gallery/6.jpg" rel="shadowbox[gallery]"><img data-src="images/gallery/6.thumb.jpg" alt="ボルトを投げるエクレア"></a>
-			<a href="images/gallery/7.jpg" rel="shadowbox[gallery]"><img data-src="images/gallery/7.thumb.jpg" alt="溶鉱炉"></a>
-			<a href="images/gallery/8.jpg" rel="shadowbox[gallery]"><img data-src="images/gallery/8.thumb.jpg" alt="水と避雷針"></a>
+			<a href="images/gallery/1.jpg" rel="shadowbox[gallery]"><img src="images/gallery/1.thumb.jpg" alt="1章コンセプトアート"></a>
+			<a href="images/gallery/2.jpg" rel="shadowbox[gallery]"><img src="images/gallery/2.thumb.jpg" alt="ボルト"></a>
+			<a href="images/gallery/3.jpg" rel="shadowbox[gallery]"><img src="images/gallery/3.thumb.jpg" alt="避雷針"></a>
+			<a href="images/gallery/4.jpg" rel="shadowbox[gallery]"><img src="images/gallery/4.thumb.jpg" alt="電撃移動中のエクレア"></a>
+			<a href="images/gallery/5.jpg" rel="shadowbox[gallery]"><img src="images/gallery/5.thumb.jpg" alt="クラゲ足場"></a>
+			<a href="images/gallery/6.jpg" rel="shadowbox[gallery]"><img src="images/gallery/6.thumb.jpg" alt="ボルトを投げるエクレア"></a>
+			<a href="images/gallery/7.jpg" rel="shadowbox[gallery]"><img src="images/gallery/7.thumb.jpg" alt="溶鉱炉"></a>
+			<a href="images/gallery/8.jpg" rel="shadowbox[gallery]"><img src="images/gallery/8.thumb.jpg" alt="水と避雷針"></a>
 		</div>
 	</div>
 	<div id="download" class="download">
@@ -245,7 +245,7 @@
 			<h2>ダウンロード</h2>
 			<div class="download-pane is-main">
 				<h3>本編</h3>
-				<a href="#" class="download-button"><span>電撃少女エクレア v1.0</span>300MB</a>
+				<a href="https://freegame-mugen.jp/action/game_7494.html#gameFileInfo" class="download-button"><span>電撃少女エクレア v1.0.1</span>フリーゲーム夢現よりダウンロード</a>
 				<h4>含まれているコンテンツ</h4>
 				<ul>
 					<li>第一章</li>
