--- a/src/index.html
+++ b/src/index.html
@@ -245,12 +245,17 @@
 			<h2>ダウンロード</h2>
 			<div class="download-pane is-main">
 				<h3>本編</h3>
-				<a href="https://freegame-mugen.jp/action/game_7494.html#gameFileInfo" class="download-button"><span>電撃少女エクレア v1.0.2</span>フリーゲーム夢現よりダウンロード</a>
+				<a href="https://freegame-mugen.jp/action/game_7494.html#gameFileInfo" class="download-button"><span>電撃少女エクレア v1.1.0</span>フリーゲーム夢現よりダウンロード</a>
 				<h4>含まれているコンテンツ</h4>
 				<ul>
-					<li>第一章</li>
+					<li>第一章, 第一章チャレンジモード</li>
 				</ul>
 				<p>全4章構成を予定、鋭意開発中</p>
+				<h3>推奨環境</h3>
+			<ul>
+				<li>GPU: GeForce GTX 970</li>
+				<li>画面解像度: 1920x1080</li>
+			</ul>
 			</div>
 			<div class="download-pane is-sub">
 				<h3>ミニゲーム</h3>
