動画を更新

--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
 		</div>
 	</nav>
 	<div id="movie" class="movie">
-		<a href="https://youtu.be/autYRqHTAlI" :href="isPhone ? 'https://www.youtube.com/watch?v=autYRqHTAlI' : 'https://www.youtube.com/embed/autYRqHTAlI?autoplay=1&amp;rel=0'" :rel="isPhone ? '' : 'shadowbox;width=960;height=540'" onclick="pauseMovie()">
+		<a href="https://youtu.be/qd_AQ-aOvBI" :href="isPhone ? 'https://www.youtube.com/watch?v=qd_AQ-aOvBI' : 'https://www.youtube.com/embed/qd_AQ-aOvBI?autoplay=1&amp;rel=0'" :rel="isPhone ? '' : 'shadowbox;width=960;height=540'" onclick="pauseMovie()">
 			<img src="images/movie/play.svg" width=64 height=64 alt="動画を再生" class="movie-play">
 		</a>
 		<div id="movie-player"></div>
@@ -252,10 +252,10 @@
 				</ul>
 				<p>全4章構成を予定、鋭意開発中</p>
 				<h3>推奨環境</h3>
-			<ul>
-				<li>GPU: GeForce GTX 970</li>
-				<li>画面解像度: 1920x1080</li>
-			</ul>
+				<ul>
+					<li>GPU: GeForce GTX 970</li>
+					<li>画面解像度: 1920x1080</li>
+				</ul>
 			</div>
 			<div class="download-pane is-sub">
 				<h3>ミニゲーム</h3>
