--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
 					<li>プレイ人数: 1人</li>
 				</ul>
 				<div class="header-message">
-				<span>「第一章」</span><span>公開中！</span>
+				<span>「第二章」</span><span>一部公開中！</span>
 				</div>
 			</div>
 			<div class="header-glitch">
@@ -245,10 +245,11 @@
 			<h2>ダウンロード</h2>
 			<div class="download-pane is-main">
 				<h3>本編</h3>
-				<a href="https://freegame-mugen.jp/action/game_7494.html#gameFileInfo" class="download-button"><span>電撃少女エクレア v1.1.0</span>フリーゲーム夢現よりダウンロード</a>
+				<a href="https://freegame-mugen.jp/action/game_7494.html#gameFileInfo" class="download-button"><span>電撃少女エクレア v2.0.0</span>フリーゲーム夢現よりダウンロード</a>
 				<h4>含まれているコンテンツ</h4>
 				<ul>
 					<li>第一章, 第一章チャレンジモード</li>
+					<li>第二章(フィールドステージのみ)</li>
 				</ul>
 				<p>全4章構成を予定、鋭意開発中</p>
 				<h3>推奨環境</h3>
